--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jake": "^8.0.12",
     "jshint": "^2.8.0",
     "karma": "^0.13.14",
+    "karma-commonjs": "0.0.13",
     "karma-mocha": "^0.2.0",
     "mocha": "^2.3.3",
     "semver": "^4.3.6",
